--- a/src/styling/Banner.css
+++ b/src/styling/Banner.css
@@ -3,7 +3,7 @@
     align-items: center;
     position: relative;
     padding: 8em;
-    width: 100vw;
+    max-width: 100vw;
 }
 
 .banner .text{
@@ -67,13 +67,4 @@
     right: 0;
     top: 50%;
     transform: translate(0, -50%);
-}
-
-.banner-backgroud{
-    position: absolute;
-    right: -10%;
-    top: -10%;
-    max-height: 25em;
-    z-index: -1;
-    opacity: 15%;
 }
