--- a/src/styling/Book.css
+++ b/src/styling/Book.css
@@ -1,5 +1,6 @@
-.book-a-car{
+/* .book-a-car{
     display: flex;
+    flex-direction: column;
     margin: 12em;
     align-items: center;
     justify-content: center;
@@ -14,16 +15,44 @@
     padding: 4em;
     gap: 4em;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+} */
+
+.book-a-car{
+    margin: 12em;
+    padding: 4em 6em;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25); 
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    
+}
+
+.book-a-car h1{
+    color: var(--accentcolor);
+    font-weight: 800;
+    font-size: 2em;
+}
+
+.book-a-car form{
+    display: flex;
+    gap: 2em 4em;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .book-a-car p{
     font-weight: 700;
 }
 
-.book-a-car input{
-    width: 20em;
-    height: 2.375em;
-    text-indent: 0.5em;
+.book-a-car span {
+    color: var(--accentcolor);
+}
+
+.book-a-car .input{
+    width: 250px;
+    height: 35px;
+    font-size: 0.75em;
+    text-indent: 5px;
 }
 
 .book-a-car button{
@@ -34,8 +63,8 @@
     border: none;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
     transition: 0.25s ease-in-out;
-    width: 14.625em;
-    height: 3.25em;
+    width: 250px;
+    height: 60px;
 }
 
 .book-a-car button:hover{
