--- a/src/styling/Navbar.css
+++ b/src/styling/Navbar.css
@@ -5,6 +5,7 @@
     align-items: center;
     padding: 1.5em 8em;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    z-index: 10;
 }
 
 .navbar img{
