--- a/src/styling/Book.css
+++ b/src/styling/Book.css
@@ -35,7 +35,7 @@
 
 .book-a-car form{
     display: flex;
-    gap: 2em 4em;
+    gap: 2em 1em;
     flex-wrap: wrap;
     justify-content: space-between;
 }
@@ -51,24 +51,25 @@
 .book-a-car .input{
     width: 250px;
     height: 35px;
-    font-size: 0.75em;
+    font-size: 1em;
     text-indent: 5px;
 }
 
 .book-a-car button{
-    background-color: var(--accentcolor);
-    color: var(--white);
+    background-color: transparent;
+    color: black;
     font-weight: 700;
     font-size: 1.125em;
-    border: none;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    border: 2px solid var(--accentcolor);
     transition: 0.25s ease-in-out;
     width: 250px;
     height: 60px;
 }
 
 .book-a-car button:hover{
-    transform: scale(1.05);
+    background-color: var(--accentcolor);
+    color: var(--white);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .book-a-car .icon{
