--- a/src/styling/Banner.css
+++ b/src/styling/Banner.css
@@ -4,6 +4,8 @@
     position: relative;
     padding: 8em;
     max-width: 100vw;
+    padding-top: 12em;
+    
 }
 
 .banner .text{
@@ -38,10 +40,14 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
     border: none;
     transition: 0.25s ease-in-out;
+    border: 2px solid var(--accentcolor);
 }
 
 .buttons .book:hover{
-    transform: scale(1.05);
+    background-color: transparent;
+    border: 2px solid var(--accentcolor);
+    color: black;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .buttons .learn{
@@ -54,10 +60,14 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
     border: none;
     transition: 0.25s ease-in-out;
+    border: 2px solid var(--darkcolor);
 }
 
 .buttons .learn:hover{
-    transform: scale(1.05);
+    background-color: transparent;
+    border: 2px solid var(--darkcolor);
+    color: black;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 
