--- a/src/styling/Book.css
+++ b/src/styling/Book.css
@@ -1,22 +1,3 @@
-/* .book-a-car{
-    display: flex;
-    flex-direction: column;
-    margin: 12em;
-    align-items: center;
-    justify-content: center;
-    max-width: 100vw;
-}
-
-.book-a-car form{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    padding: 4em;
-    gap: 4em;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-} */
-
 .book-a-car{
     margin: 12em;
     padding: 4em 6em;
@@ -24,7 +5,7 @@
     display: flex;
     flex-direction: column;
     gap: 2em;
-    
+    margin-bottom: 0;
 }
 
 .book-a-car h1{
