--- a/src/styling/Fleet.css
+++ b/src/styling/Fleet.css
@@ -1,12 +1,12 @@
 .fleet{
     padding: 12em;
-    padding-top: 24em;
-    margin: auto;
+    margin-top: 12em;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 1.5em;
+    padding-bottom: 0;
 }
 
 .fleet .title{
@@ -25,7 +25,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between ;
+    justify-content: space-between;
     gap: 2em 4em;
     margin-top: 6em;
     width: 100%;
