--- a/src/styling/GetInTouch.css
+++ b/src/styling/GetInTouch.css
@@ -5,7 +5,8 @@
     align-items: center;
     justify-content: center;
     margin: 8em 12em;
-    margin-top: 0;
+    margin-top: 12em;
+    margin-bottom: 0;
 }
 
 .get-in-touch .title {
