--- a/src/styling/Navbar.css
+++ b/src/styling/Navbar.css
@@ -1,11 +1,13 @@
 .navbar{
-    max-width: 100vw;
+    width: 100vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1.5em 8em;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
     z-index: 10;
+    position: fixed;
+    background-color: white;
 }
 
 .navbar img{
@@ -17,7 +19,6 @@
     display: flex;
     gap: 1.5em;
     align-items: center;
-
 }
 
 .navbar ul li a{
