--- a/src/styling/Banner.css
+++ b/src/styling/Banner.css
@@ -86,6 +86,154 @@
     height: 22em;
     z-index: -1;
     opacity: 0.4;
-    mask-image: linear-gradient(to left, rgba(0, 0, 0, 1.0) 20%, transparent 80%);;
+    mask-image: linear-gradient(to left, rgba(0, 0, 0, 1.0) 20%, transparent 80%);
+    
 }
 
+
+
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .banner{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 4em;
+        padding-top: 8em;
+    }
+    .banner .text{
+        width: 100%;
+    }
+    .banner .text h1 {
+        font-size: 4em;
+    }
+    .buttons {
+        display: flex;
+        flex-direction: column;
+        gap: 2em;
+        align-items: center;
+        justify-content: center;
+    }
+    .buttons > *{
+        width: 250px;
+    }
+    .banner-image{
+        display: none;
+    }
+    .banner-background{
+        display: none;
+    }
+}
+
+@media only screen and (min-device-width : 480px) and (max-device-width : 750px){
+    .banner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 4em;
+        padding-top: 8em;
+    }
+    .banner .text {
+        width: 100%;
+    }
+
+    .banner .text h1 {
+        font-size: 4em;
+    }
+
+    .buttons {
+        display: flex;
+        flex-direction: column;
+        gap: 2em;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .buttons>* {
+        width: 250px;
+    }
+
+    .banner-image {
+        display: none;
+    }
+
+    .banner-background {
+        display: none;
+    }
+}
+
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 750px) and (max-device-width : 1024px) {
+    .banner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 8em;
+        padding-top: 10em;
+    }
+
+    .banner .text {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .banner .text h1 {
+        font-size: 4em;
+    }
+
+    .buttons {
+        display: flex;
+        flex-direction: column;
+        gap: 2em;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .buttons>* {
+        width: 250px;
+    }
+
+    .banner-image {
+        display: none;
+    }
+
+    .banner-background {
+        display: none;
+    }
+}
+
+@media only screen and (min-device-width : 1024px) and (max-device-width : 1224px) {
+    .banner{
+        
+        padding: 4em;
+        padding-top: 10em;
+    }
+
+    .banner .text h1 {
+        font-size: 4em;
+    }
+
+    .banner-image{
+        max-height: 15em;
+    }
+
+    .banner-background{
+        height: 18em;
+    }
+}
+
+/* Large screens ----------- */
+@media only screen and (min-width : 1824px) {
+    /* Styles */
+}
