--- a/src/styling/Book.css
+++ b/src/styling/Book.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     gap: 2em;
-    margin-bottom: 0;
+    margin-bottom: 6em;
 }
 
 .book-a-car h1{
