--- a/src/styling/GetInTouch.css
+++ b/src/styling/GetInTouch.css
@@ -92,3 +92,91 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
+
+
+
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .get-in-touch{
+        margin: 2em;
+        margin-top: 8em;
+        margin-bottom: 0;
+    }
+    
+    .get-in-touch .form-and-info{
+        flex-direction: column;
+    }
+
+    .get-in-touch .info{
+        width: 100%;
+    }
+
+    .get-in-touch form{
+        align-items: center;
+    }
+
+    .get-in-touch form div {
+        gap: 1em;
+        width: 100%;
+    }
+}
+
+@media only screen and (min-device-width : 481px) and (max-device-width : 750px) {
+    .get-in-touch {
+        margin: 4em;
+        margin-top: 8em;
+        margin-bottom: 0;
+    }
+
+    .get-in-touch .form-and-info {
+        flex-direction: column;
+    }
+
+    .get-in-touch .info {
+        width: 100%;
+    }
+
+    .get-in-touch form {
+        align-items: center;
+    }
+
+    .get-in-touch form div {
+        gap: 2em; 
+        width: 100%;
+    }
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 751px) and (max-device-width : 1024px) {
+    .get-in-touch {
+        margin: 6em;
+        margin-top: 8em;
+        margin-bottom: 0;
+    }
+
+    .get-in-touch .form-and-info {
+        flex-direction: column;
+    }
+
+    .get-in-touch .info {
+        width: 100%;
+    }
+
+    .get-in-touch form {
+        align-items: center;
+    }
+
+    .get-in-touch form div {
+        gap: 2em;
+        width: 100%;
+    }
+}
+
+@media only screen and (min-device-width : 1025px) and (max-device-width : 1224px) {
+    .get-in-touch {
+        margin: 8em;
+        margin-top: 8em;
+        margin-bottom: 0;
+    }
+}
