--- a/src/styling/Navbar.css
+++ b/src/styling/Navbar.css
@@ -47,3 +47,91 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     background-color: var(--accentcolor);
 }
+
+
+
+
+.hamburger-button {
+    display: none;
+    cursor: pointer;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+    width: 35px;
+    height: 3px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+/* Rotate first bar */
+.change .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+}
+
+/* Fade out the second bar */
+.change .bar2 {
+    opacity: 0;
+}
+
+/* Rotate last bar */
+.change .bar3 {
+    transform: translate(0, -7px) rotate(45deg);
+}
+
+
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .hamburger-button {
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    .navbar{
+        padding: 2em;
+    }
+
+    .navbar ul{
+        display: none;
+    }
+}
+
+@media only screen and (min-device-width : 481px) and (max-device-width : 750px) {
+    .hamburger-button {
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    .navbar {
+        padding: 2em 4em;
+    }
+
+    .navbar ul {
+        display: none;
+    }
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 751px) and (max-device-width : 1024px) {
+    .hamburger-button {
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    .navbar {
+        padding: 2em 4em;
+    }
+
+    .navbar ul {
+        display: none;
+    }
+}
+
+@media only screen and (min-device-width : 1025px) and (max-device-width : 1224px) {
+    .navbar {
+        padding: 2em 4em;
+    }
+}
