--- a/src/styling/Navbar.css
+++ b/src/styling/Navbar.css
@@ -67,19 +67,21 @@
 }
 
 /* Rotate first bar */
-.change .bar1 {
+.toggle .bar1 {
     transform: translate(0, 11px) rotate(-45deg);
 }
 
 /* Fade out the second bar */
-.change .bar2 {
+.toggle .bar2 {
     opacity: 0;
 }
 
 /* Rotate last bar */
-.change .bar3 {
+.toggle .bar3 {
     transform: translate(0, -7px) rotate(45deg);
 }
+
+
 
 
 
@@ -94,8 +96,37 @@
         padding: 2em;
     }
 
-    .navbar ul{
-        display: none;
+    .nav-links{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        text-align: left;
+        position: fixed;
+        padding: 2em;
+        top: 100px;
+        left: 100%;
+        background-color: white;
+        width: 100vw;
+        height: 100vh;
+        transition: 0.5s;
+    }
+
+    .nav-auth{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 25em;
+        left: 100%;
+        width: 100vw;
+        height: 100vh;
+        transition: 0.5s;
+    }
+
+    .active{
+        transform: translate(-100%);
     }
 }
 
@@ -106,11 +137,40 @@
     }
 
     .navbar {
-        padding: 2em 4em;
+        padding: 2em;
     }
 
-    .navbar ul {
-        display: none;
+    .nav-links {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        text-align: left;
+        position: fixed;
+        padding: 2em;
+        top: 100px;
+        left: 100%;
+        background-color: white;
+        width: 100vw;
+        height: 100vh;
+        transition: 0.5s;
+    }
+
+    .nav-auth {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 25em;
+        left: 100%;
+        width: 100vw;
+        height: 100vh;
+        transition: 0.5s;
+    }
+
+    .active {
+        transform: translate(-100%);
     }
 }
 
@@ -122,11 +182,40 @@
     }
 
     .navbar {
-        padding: 2em 4em;
+        padding: 2em;
     }
 
-    .navbar ul {
-        display: none;
+    .nav-links {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        text-align: left;
+        position: fixed;
+        padding: 2em;
+        top: 100px;
+        left: 100%;
+        background-color: white;
+        width: 100vw;
+        height: 100vh;
+        transition: 0.5s;
+    }
+
+    .nav-auth {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 25em;
+        left: 100%;
+        width: 100vw;
+        height: 100vh;
+        transition: 0.5s;
+    }
+
+    .active {
+        transform: translate(-100%);
     }
 }
 
